--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/eventvariete
 spring.datasource.username = root
 spring.datasource.password = studio10
+
+server.port=${PORT:8080}
